--- a/index.html
+++ b/index.html
@@ -11,14 +11,12 @@
   <body>
     <a-scene>
       <a-assets>
-        <a-asset-item id="mycar" src="assets/CARModel.glb"></a-asset-item>
+        <a-asset-item id="myvending" src="assets/Vending.glb"></a-asset-item>
       </a-assets>
 
-      <a-entity gltf-model="assets/CARModel.glb" position="0 0 2.39342" scale="0.01 0.01 0.01"></a-entity>
+      <a-entity gltf-model="assets/Vending.glb" position="-1.62025 0.41449 -4.11518" scale="0.2 0.2 0.2"></a-entity>
       
-      <a-box position="-0.02946 2.678 -4.90874" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="-0.05608 3.89555 -4.90527" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+      <a-box position="-0.02946 0.07672 -4.03316" color="#4CC3D9" scale="2 0.2 2"></a-box>
       <a-plane
         position="0 0 -4"
         rotation="-90 0 0"
