--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   
   <body>
-    <a-scene fog="type: linear; color: #0077b6; near: 1; far: 5">
+    <a-scene fog="type: linear; color: #0077b6; near: 1; far: 4">
       <a-assets>
         <a-asset-item id="myvending" src="assets/Vending.glb"></a-asset-item>
         <a-asset-item id="mycan" src="assets/SodaCan.glb"></a-asset-item>
@@ -22,6 +22,22 @@
       <a-entity gltf-model="assets/SodaCan.glb" position="-0.0157 0.89979 -3.11227" scale="0.015 0.015 0.015" rotation="0 59.99999999999999 55"></a-entity>
       <a-entity gltf-model="assets/SodaCan.glb" position="-0.09362 0.99455 -2.9924" scale="0.015 0.015 0.015" rotation="0 40 45"></a-entity>
       <a-entity gltf-model="assets/SodaCan.glb" position="-0.22736 1.08608 -2.88915" scale="0.015 0.015 0.015" rotation="0 20 45"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="-0.36839 1.21387 -2.88915" scale="0.015 0.015 0.015" rotation="0 -50 59.99999999999999"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="-0.48875 1.32086 -3.05211" scale="0.015 0.015 0.015" rotation="0 -50 59.99999999999999"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="-0.60122 1.42608 -3.25117" scale="0.015 0.015 0.015" rotation="0 -90 59.99999999999999"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="-0.62025 1.51074 -3.44813" scale="0.015 0.015 0.015" rotation="0 -100 90"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="-0.62025 1.51074 -3.63831" scale="0.015 0.015 0.015" rotation="0 -100 90"></a-entity>
+
+      <a-entity gltf-model="assets/SodaCan.glb" position="0.06577 0.89979 -3.11227" scale="0.015 0.015 0.015" rotation="0 35 -50"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="0.1831 0.99451 -3.2054" scale="0.015 0.015 0.015" rotation="0 10 -59.99999999999999"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="0.36503 1.10027 -3.2054" scale="0.015 0.015 0.015" rotation="0 10 -59.99999999999999"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="0.50525 1.21302 -3.23309" scale="0.015 0.015 0.015" rotation="-61.75 29.999999999999996 -59.99999999999999"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="0.61231 1.26029 -3.38551" scale="0.015 0.015 0.015" rotation="-61.75 -40 -59.99999999999999"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="0.78341 1.26029 -3.38551" scale="0.015 0.015 0.015" rotation="-61.75 -40 -59.99999999999999"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="0.98046 1.30081 -3.38551" scale="0.015 0.015 0.015" rotation="-20 20 -59.99999999999999"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="0.99649 1.3395 -3.60572" scale="0.015 0.015 0.015" rotation="-20 50 -59.99999999999999"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="1.07792 1.38762 -3.60572" scale="0.015 0.015 0.015" rotation="50 50 20"></a-entity>
+      
       
       <a-box position="-0.02946 0.07672 -4.03316" color="#4CC3D9" scale="2 0.2 2"></a-box>
       <a-entity light="type: ambient; color: blue; intensity: 1"></a-entity>
@@ -33,7 +49,7 @@
         height="40"
         color="#7BC8A4"
       ></a-plane>
-      <a-camera> </a-camera>
+        <a-camera position="1.38748 1.42706 -1.66165" rotation="-1.145915590261645 60 0" camera="active: true"> </a-camera>
     </a-scene>
   </body>
   </body>
