--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
       <a-entity gltf-model="assets/SodaCan.glb" position="-0.60122 1.42608 -3.25117" scale="0.015 0.015 0.015" rotation="0 -90 59.99999999999999"></a-entity>
       <a-entity gltf-model="assets/SodaCan.glb" position="-0.62025 1.51074 -3.44813" scale="0.015 0.015 0.015" rotation="0 -100 90"></a-entity>
       <a-entity gltf-model="assets/SodaCan.glb" position="-0.62025 1.51074 -3.63831" scale="0.015 0.015 0.015" rotation="0 -100 90"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="1.06694 1.79306 -4.07704" scale="0.015 0.015 0.015" rotation="-50 20 20"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="-0.66616 1.6776 -3.96295" scale="0.015 0.015 0.015" rotation="0 -59.99999999999999 50"></a-entity>
+      <a-entity gltf-model="assets/SodaCan.glb" position="-0.74238 1.78598 -4.13774" scale="0.015 0.015 0.015" rotation="0 -59.99999999999999 50"></a-entity>
 
       <a-entity gltf-model="assets/SodaCan.glb" position="0.06577 0.89979 -3.11227" scale="0.015 0.015 0.015" rotation="0 35 -50"></a-entity>
       <a-entity gltf-model="assets/SodaCan.glb" position="0.1831 0.99451 -3.2054" scale="0.015 0.015 0.015" rotation="0 10 -59.99999999999999"></a-entity>
