--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
         <a-entity gltf-model="assets/SodaCan.glb" position="1.09148 1.47934 -3.80406" scale="0.015 0.015 0.015" rotation="50 50 20"></a-entity>
         <a-entity gltf-model="assets/SodaCan.glb" position="1.09148 1.62935 -3.80406" scale="0.015 0.015 0.015" rotation="-50 -50 20"></a-entity>
         <a-entity gltf-model="assets/SodaCan.glb" position="1.06694 1.79306 -4.07704" scale="0.015 0.015 0.015" rotation="-50 20 20"></a-entity>
+        <a-entity gltf-model="assets/SodaCan.glb" position="0.82978 1.79306 -4.23639" scale="0.015 0.015 0.015" rotation="-49.62 10.97 4.96"></a-entity>
+        
+        <a-entity gltf-model="assets/SodaCan.glb" position="0.72894 1.86045 -4.44979" scale="0.015 0.015 0.015" rotation="-49.62 10.97 50"></a-entity>
+        <a-entity gltf-model="assets/SodaCan.glb" position="0.52278 1.88296 -4.55297" scale="0.015 0.015 0.015" rotation="-49.62 10.97 -50"></a-entity>
+        <a-entity gltf-model="assets/SodaCan.glb" position="0.35237 1.88296 -4.61844" scale="0.015 0.015 0.015" rotation="-49.62 10.97 50"></a-entity>
+        <a-entity gltf-model="assets/SodaCan.glb" position="-0.08322 1.93434 -4.65973" scale="0.015 0.015 0.015" rotation="-49.62 10.97 -80"></a-entity>
+        <a-entity gltf-model="assets/SodaCan.glb" position="-0.25035 1.94683 -4.6832" scale="0.015 0.015 0.015" rotation="-49.62 10.97 20"></a-entity>
+        <a-entity gltf-model="assets/SodaCan.glb" position="-0.4799 1.94683 -4.6832" scale="0.015 0.015 0.015" rotation="-49.62 29.999999999999996 50"></a-entity>
+        <a-entity gltf-model="assets/SodaCan.glb" position="-0.82439 1.97486 -4.48454" scale="0.015 0.015 0.015" rotation="20 50 -90"></a-entity>
         
         <a-box position="-0.02946 0.07672 -4.03316" color="#01497c" scale="2 0.2 2"></a-box>
         <a-entity light="color: blue; intensity: 0.2; type: ambient"></a-entity>
