--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
         </a-plane>
 
       </a-entity>
+
+      <a-entity id="left-hand" laser-controls="hand: left" oculus-touch-controls="hand: left" vive-controls="hand: left" windows-motion-controls="hand: left" daydream-controls="hand: left" gearvr-controls="hand: left" hand-controls="hand: left"></a-entity>
+      <a-entity id="right-hand" laser-controls="hand: right" oculus-touch-controls="hand: right" vive-controls="hand: right" windows-motion-controls="hand: right" daydream-controls="hand: right" gearvr-controls="hand: right" hand-controls="hand: right"></a-entity>
       
       <a-sky color="#0077b6"></a-sky>
       <a-plane
