--- a/index.html
+++ b/index.html
@@ -63,8 +63,19 @@
 
       </a-entity>
 
-      <a-entity id="left-hand" laser-controls="hand: left" oculus-touch-controls="hand: left" vive-controls="hand: left" windows-motion-controls="hand: left" daydream-controls="hand: left" gearvr-controls="hand: left" hand-controls="hand: left"></a-entity>
-      <a-entity id="right-hand" laser-controls="hand: right" oculus-touch-controls="hand: right" vive-controls="hand: right" windows-motion-controls="hand: right" daydream-controls="hand: right" gearvr-controls="hand: right" hand-controls="hand: right"></a-entity>
+      <a-entity id="rig" position="0 0 4">
+        <a-entity camera look-controls position="0 1.6 0"></a-entity>
+        <a-entity
+          laser-controls="hand: left"
+          raycaster="objects: .clickable; far: 20; showLine: true"
+          position="-0.5 1.5 -0.5"
+        ></a-entity>
+        <a-entity
+          laser-controls="hand: right"
+          raycaster="objects: .clickable; far: 20; showLine: true"
+          position="0.5 1.5 -0.5"
+        ></a-entity>
+      </a-entity>
       
       <a-sky color="#0077b6"></a-sky>
       <a-plane
